Added comprehensive unit test cases for User